Engine and Task updates